--- a/forumapp/templates/forumapp/index.html
+++ b/forumapp/templates/forumapp/index.html
@@ -20,7 +20,7 @@
                             </div>
                             <a href="{% url 'post_detail' post.slug %}" class="post-link">
                                 <h2 class="card-title">{{ post.title }}</h2>
-                                <p class="card-text">{{post.excerpt}}</p>
+                                <p class="card-text">{{ post.excerpt }}</p>
                             </a>
 
                             <hr />
@@ -42,7 +42,8 @@
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</li>
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+            {% endif %}
             {% if page_obj.has_next %}
             <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
             {% endif %}
@@ -53,6 +54,4 @@
 
 <!-- index.html content ends here -->
 {% endblock %}
-{% block copyright %}
-    Copyright 2024 Elvira Tidemo
-{% endblock %}
+{% block copyright %}Copyright 2023 Matt Rudge{% endblock %}
