Change navbar in base.html and add styling to index.html

--- a/forumapp/templates/forumapp/index.html
+++ b/forumapp/templates/forumapp/index.html
@@ -5,52 +5,51 @@
 <!-- index.html content starts here -->
 <div class="container-fluid">
     <div class="row">
-
-        <!-- Blog Entries Column -->
+        <header>
+            <div class="intro">
+            <h1 class="main-title">Crip Talk</h1>
+            <p class="forum-intro">A separatist forum for those of us who have disabilities of different kinds to connect with, relate to and learn from each other</p>
+            </div>
+        </header>
+        <!-- Example thread posts column with Carousel -->
         <div class="col-12 mt-3 left">
-            <div class="row">
-                {% for post in post_list %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="image-container">
-                                <div class="image-flash">
-                                    <p class="author">Author: {{ post.author }}</p>
+            <div id="postCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    {% for post in post_list %}
+                    <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card mb-4">
+                                    <div class="card-body">
+                                        <div class="image-container">
+                                            <div class="image-flash">
+                                                <p class="author">Author: {{ post.author }}</p>
+                                            </div>
+                                        </div>
+                                        <a href="{% url 'post_detail' post.slug %}" class="post-link">
+                                            <h2 class="card-title">{{ post.title }}</h2>
+                                            <p class="card-text">{{ post.excerpt }}</p>
+                                        </a>
+                                        <hr />
+                                        <p class="card-text text-muted h6">{{ post.created_on}}</p>
+                                    </div>
                                 </div>
                             </div>
-                            <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                                <p class="card-text">{{ post.excerpt }}</p>
-                            </a>
-
-                            <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on}}
-                            </p>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-                {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-                {% endif %}
-                {% endfor %}
-
+                <a class="carousel-control-prev" href="#postCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#postCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
-    </div>
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-            {% endif %}
-            {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-    {% endif %}
-</div>
+
 
 <!-- index.html content ends here -->
 {% endblock %}
