Add link button to sign up page in index.html

--- a/forumapp/templates/forumapp/index.html
+++ b/forumapp/templates/forumapp/index.html
@@ -7,8 +7,9 @@
     <div class="row">
         <header>
             <div class="intro">
-            <h1 class="main-title">Crip Talk</h1>
-            <p class="forum-intro">A separatist forum for those of us who have disabilities of different kinds to connect with, relate to and learn from each other</p>
+            <h1 class="mainTitle">Crip Talk</h1>
+            <p class="forumIntro">A separatist forum for those of us who have disabilities of different kinds to connect with, relate to and learn from each other</p>
+            <a class="btn btn-primary" href="#" role="button">Sign Up</a>
             </div>
         </header>
         <!-- Example thread posts column with Carousel -->
