--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,12 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+
 body {
-    background-color: #F9FAFC;
+    background-color: #f8f8f8;
+}
+
+.intro {
+    background-color: #ff8800;
+    padding: 20px;
+    box-sizing: border-box;
+    position: relative;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    margin-bottom: 56px;
+    text-align: center;
+}
+
+.container {
+    padding-top: 20px; 
+}
+
+.mainTitle {
+    font-family: "Bebas Neue", sans-serif;
+    color: #f8f8f8;
+}
+
+h1{
+    font-size: 200px;
+}
+
+.forumIntro {
+    font-family: "Bebas Neue", sans-serif;
+    color: #272d2d;
+    font-size: 30px;
+}
+
+.btn-primary {
+    align-items: center;
+    background-color: #ff4d29;
+    color: #f8f8f8;
+    border-color: #ff4d29;
+    border-radius: 15px;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 30px;
+    padding: 10px 20px;
+} 
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active {
+    background-color: #f8f8f8;
+    border-color: #f8f8f8;
+    color: #272d2d;
+    outline: none;
 }
 
 .brand {
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
     font-weight: 700;
-    color: #4A4A4F;
+    color: #272d2d;
+}
+
+.navbar {
+    background-color: #ff8800;
+}
+
+.navbar-brand {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: xx-large;
+}
+
+#postCarousel {
+    background-color: transparent;
+    padding: 20px;
 }
 
 .red-o {
@@ -18,20 +85,20 @@ body {
 }
 
 .light-bg {
-    background-color: #fff;
+    background-color: #f8f8f8;
 }
 
 .dark-bg {
-    background-color: #445261;
+    background-color: #272d2d;
 }
 
 .main-bg {
-    background-color: #F9FAFC;
+    background-color: #f8f8f8;
 }
 
 .card {
     border: none;
-    background-color: transparent;
+    background-color: #f8f8f8;
 }
 
 .image-container {
@@ -130,7 +197,7 @@ body {
 
 .link:hover,
 .link:active {
-    color: #445261;
+    color: #9ec5ff;
     text-decoration: underline;
 }
 
