--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ body {
     width: 100%;
     top: 0;
     z-index: 1000;
-    margin-bottom: 56px;
+    margin-bottom: 25px;
     text-align: center;
 }
 
@@ -72,8 +72,14 @@ h1{
 }
 
 #postCarousel {
-    background-color: transparent;
+    background-color: #9ec5ff;
     padding: 20px;
+    margin-bottom: 56px;
+    border-radius: 20px;
+}
+
+.card-body {
+    background-color: #f8f8f8;
 }
 
 .red-o {
@@ -98,7 +104,7 @@ h1{
 
 .card {
     border: none;
-    background-color: #f8f8f8;
+    color: #272d2d;
 }
 
 .image-container {
@@ -106,11 +112,10 @@ h1{
 }
 
 .image-flash {
-    position: absolute;
+    position: relative;
     bottom: 5%;
     min-width: 30%;
-    left: -2px;
-    background-color: #188181;
+    left: -2px; 
 }
 
 .scale {
@@ -119,7 +124,7 @@ h1{
 }
 
 .author {
-    color: white;
+    color: #272d2d;
     margin: 4px;
     text-transform: uppercase;
 }
