--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,6 @@ body {
     position: relative;
     width: 100%;
     top: 0;
-    z-index: 1000;
     margin-bottom: 25px;
     text-align: center;
 }
@@ -69,6 +68,14 @@ h1{
 .navbar-brand {
     font-family: "Bebas Neue", sans-serif;
     font-size: xx-large;
+}
+
+.dropdown-menu.dropdown-menu-hover {
+    transition: none;
+}
+
+.dropdown-menu.dropdown-menu-hover:hover {
+    display: block;
 }
 
 #postCarousel {
