--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -11,8 +11,7 @@ body {
     position: relative;
     width: 100%;
     top: 0;
-    z-index: 1000;
-    margin-bottom: 56px;
+    margin-bottom: 25px;
     text-align: center;
 }
 
@@ -71,9 +70,23 @@ h1{
     font-size: xx-large;
 }
 
+.dropdown-menu.dropdown-menu-hover {
+    transition: none;
+}
+
+.dropdown-menu.dropdown-menu-hover:hover {
+    display: block;
+}
+
 #postCarousel {
-    background-color: transparent;
+    background-color: #9ec5ff;
     padding: 20px;
+    margin-bottom: 56px;
+    border-radius: 20px;
+}
+
+.card-body {
+    background-color: #f8f8f8;
 }
 
 .red-o {
@@ -98,7 +111,7 @@ h1{
 
 .card {
     border: none;
-    background-color: #f8f8f8;
+    color: #272d2d;
 }
 
 .image-container {
@@ -106,11 +119,10 @@ h1{
 }
 
 .image-flash {
-    position: absolute;
+    position: relative;
     bottom: 5%;
     min-width: 30%;
-    left: -2px;
-    background-color: #188181;
+    left: -2px; 
 }
 
 .scale {
@@ -119,7 +131,7 @@ h1{
 }
 
 .author {
-    color: white;
+    color: #272d2d;
     margin: 4px;
     text-transform: uppercase;
 }
