--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,12 @@
     
                     <!-- Sign Up -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign Up</a>
+                        <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                    </li>
+
+                    <!-- Login -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Login</a>
                     </li>
     
                     <!-- Topics (Dropdown) -->
