Add login django form and password change, password reset forms

--- a/forumapp/templates/forumapp/signup.html
+++ b/forumapp/templates/forumapp/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<!-- The form method code below is collected from reintech.io written by Arthur C. Codex - for full reference, see credits in README -->
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
