--- a/forumapp/templates/forumapp/index.html
+++ b/forumapp/templates/forumapp/index.html
@@ -12,6 +12,16 @@
             <a class="btn btn-primary" href="#" role="button">Sign Up</a>
             </div>
         </header>
+        {% if user.is_authenticated %}
+        Hi {{ user.username }}!
+        <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Log Out</button>
+        </form>
+        {% else %}
+        <p>You are not logged in</p>
+        <a href="{% url 'login' %}">Log In</a>
+        {% endif %}
         <!-- Example thread posts column with Carousel -->
         <div class="col-12 mt-3 left">
             <div id="postCarousel" class="carousel slide" data-ride="carousel">
@@ -52,4 +62,3 @@
 
 <!-- index.html content ends here -->
 {% endblock %}
-{% block copyright %}Copyright 2024 Elvira Tidemo{% endblock %}
