--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
 
                     <!-- Login -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
                     </li>
     
                     <!-- Topics (Dropdown) -->
