--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,11 +5,17 @@
 {% block content %}
 
 <h2>Log In</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form }}
-  <button type="submit">Log In</button>
-</form>
-<p><a href="{% url 'password_change' %}">Change Password</a></p>
-<p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
+{% if user.is_authenticated %}
+        Hi {{ user.username }}, you are logged in!
+        <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Log Out</button>
+        </form>
+{% else %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit">Log In</button>
+    </form>
+    <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
 {% endblock %}
