--- a/templates/base.html
+++ b/templates/base.html
@@ -69,9 +69,11 @@
                             <a class="dropdown-item" href="#">Wall of Complaints</a>
                         </div>
                     </li>
-                    
-    
-                    <!-- Post (Conditionally displayed based on user authentication) -->
+                    <!-- Create posts (only displayed if user is logged in) -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'create_post' %}">Create Post</a>
+                    </li>
+
                     <!-- You can add the logic in your Django templates to show/hide this based on user authentication -->
                     <li class="nav-item">
                         <a class="nav-link" href="#">Post</a>
