--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,4 +18,6 @@
         <button type="submit">Log In</button>
     </form>
     <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
+{% endif %}
+
 {% endblock %}
