--- a/forumapp/templates/forumapp/create_post.html
+++ b/forumapp/templates/forumapp/create_post.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if user.is_authenticated %}
     <h2>Create a New Post</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Create Post</button>
     </form>
+{% else %}
+    <h2>You need to be logged in to create a post</h2>
+    <a href="{% url 'login' %}">Log In</a>
+    <p>If you don't have an account, you can create one on our signup page</p>
+    <a href="{% url 'signup' %}">Sign Up</a>
 {% endblock %}
