--- a/forumapp/templates/forumapp/create_post.html
+++ b/forumapp/templates/forumapp/create_post.html
@@ -13,4 +13,5 @@
     <a href="{% url 'login' %}">Log In</a>
     <p>If you don't have an account, you can create one on our signup page</p>
     <a href="{% url 'signup' %}">Sign Up</a>
+{% endif %}
 {% endblock %}
