--- a/forumapp/templates/forumapp/wall_of_complaints.html
+++ b/forumapp/templates/forumapp/wall_of_complaints.html
@@ -9,4 +9,5 @@
         <p>{{ post.content }}</p>
         <!-- ... (other details) -->
     {% include 'forumapp/post_detail.html' %}
+    {% endfor %}
 {% endblock %}
