--- a/forumapp/templates/forumapp/index.html
+++ b/forumapp/templates/forumapp/index.html
@@ -12,21 +12,11 @@
             <a class="btn btn-primary" href="#" role="button">Sign Up</a>
             </div>
         </header>
-        {% if user.is_authenticated %}
-        Hi {{ user.username }}!
-        <form action="{% url 'logout' %}" method="post">
-            {% csrf_token %}
-            <button type="submit">Log Out</button>
-        </form>
-        {% else %}
-        <p>You are not logged in</p>
-        <a href="{% url 'login' %}">Log In</a>
-        {% endif %}
-        <!-- Example thread posts column with Carousel -->
+        <!-- Example thread posts column in carousel -->
         <div class="col-12 mt-3 left">
             <div id="postCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    {% for post in post_list %}
+                    {% for post in random_posts %}
                     <div class="carousel-item {% if forloop.first %}active{% endif %}">
                         <div class="row">
                             <div class="col-md-4">
@@ -58,6 +48,8 @@
                 </a>
             </div>
         </div>
+    </div>
+</div>
 
 
 <!-- index.html content ends here -->
