--- a/forumapp/templates/forumapp/index.html
+++ b/forumapp/templates/forumapp/index.html
@@ -13,34 +13,53 @@
             </div>
         </header>
         <!-- Example thread posts column in carousel -->
-        <div id="postCarousel" class="carousel slide" data-bs-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-bs-target="#postCarousel" data-bs-slide-to="0" class="active"></li>
-                <li data-bs-target="#postCarousel" data-bs-slide-to="1"></li>
-                <li data-bs-target="#postCarousel" data-bs-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner d-flex flex-row">
-                {% for post in random_posts %}
-                    <div class="carousel-item {% if forloop.first %}active{% endif %}" id="post{{ post.id }}">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="col-md-4">
-                                <div class="card mb-4 mx-auto">
-                                    <div class="card-body">
-                                        <div class="image-container">
-                                            <div class="image-flash">
-                                                <p class="author">Author: {{ post.author }}</p>
+        <div class="container examples">
+            <div class="row">
+                <div class="col-12 mt-3">
+                    <div class="example-posts">
+                        {% for post in random_posts %}
+                            {% if forloop.counter0|divisibleby:3 %}
+                                <div class="row justify-content-center">
+                            {% endif %}
+                                    <div class="col-md-4">
+                                        <div class="card mb-4 mx-auto">
+                                            <div class="card-body">
+                                                <div class="image-container">
+                                                    <div class="image-flash">
+                                                        <p class="author">Author: {{ post.author }}</p>
+                                                    </div>
+                                                </div>
+                                                <a href="{% url 'post_detail' post.slug %}" class="post-link">
+                                                    <h2 class="card-title">{{ post.title }}</h2>
+                                                    <p class="card-text">{{ post.excerpt }}</p>
+                                                </a>
                                             </div>
                                         </div>
-                                        <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                                            <h2 class="card-title">{{ post.title }}</h2>                                                    <p class="card-text">{{ post.excerpt }}</p>
-                                        </a>
                                     </div>
+                                    {% if forloop.counter0|divisibleby:3 or forloop.last %}
                                 </div>
-                            </div>
-                        </div>
+                            {% endif %}
+                        {% endfor %}
                     </div>
-                {% endfor %}
-            </div>            
+        
+                    <!-- Pagination -->
+                    <nav aria-label="Example Posts Pagination">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item {% if not random_posts.has_previous %}disabled{% endif %}">
+                                <a class="page-link" href="?page={{ random_posts.previous_page_number }}" tabindex="-1" {% if not random_posts.has_previous %}aria-disabled="true"{% endif %}>Previous</a>
+                            </li>
+                            {% for page_num in random_posts.paginator.page_range %}
+                                <li class="page-item {% if page_num == random_posts.number %}active{% endif %}">
+                                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                </li>
+                            {% endfor %}
+                            <li class="page-item {% if not random_posts.has_next %}disabled{% endif %}">
+                                <a class="page-link" href="?page={{ random_posts.next_page_number }}" {% if not random_posts.has_next %}aria-disabled="true"{% endif %}>Next</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
     </div>
 </div>
